# RextEditor

./: .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt  FileManager.cpp  FileManager.h  RextEditorWindow.cpp  RextEditorWindow.h  RextEditorWindow.mm  RextEditorWindow.ui  RextEditorWindowStyle.qss  main.cpp
test/: CMakeLists.txt  unit_tests.cpp
